--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                 Top 11
                             </a>
                             <p>
-                                Romantic Destinations
+                                Honeymoon Destinations
                             </p>
                         </span>
                     </div>
@@ -432,7 +432,7 @@
                                 Top 11
                             </a>
                             <p>
-                                Romantic Destinations
+                                International Destinations
                             </p>
                         </span>
                     </div>
@@ -445,7 +445,7 @@
                                 Top 11
                             </a>
                             <p>
-                                Romantic Destinations
+                                Beach Destinations
                             </p>
                         </span>
                     </div>
@@ -458,7 +458,7 @@
                                 Top 11
                             </a>
                             <p>
-                                Romantic Destinations
+                                Weekend Destinations
                             </p>
                         </span>
                     </div>
